@@ -28,9 +28,9 @@ test_obtain_credentials (void *unused)
    BSON_UNUSED (unused);
 
    /* A username specified with a password is parsed correctly. */
-   uri = mongoc_uri_new_with_error ("mongodb://access_key_id:secret_access_key@localhost/", &error);
+   uri = mongoc_uri_new_with_error ("mongodb://access_key_id:secret_access_key@localhost/?authMechanism=MONGODB-AWS",
+                                    &error);
    ASSERT_OR_PRINT (uri, error);
-   ASSERT (mongoc_uri_set_auth_mechanism (uri, "MONGODB-AWS"));
    ret = _mongoc_aws_credentials_obtain (uri, &creds, &error);
    ASSERT_OR_PRINT (ret, error);
    ASSERT_CMPSTR (creds.access_key_id, "access_key_id");
@@ -40,9 +40,8 @@ test_obtain_credentials (void *unused)
    mongoc_uri_destroy (uri);
 
    /* A username specified with no password is an error. */
-   uri = mongoc_uri_new_with_error ("mongodb://access_key_id:@localhost/", &error);
+   uri = mongoc_uri_new_with_error ("mongodb://access_key_id:@localhost/?authMechanism=MONGODB-AWS", &error);
    ASSERT_OR_PRINT (uri, error);
-   ASSERT (mongoc_uri_set_auth_mechanism (uri, "MONGODB-AWS"));
    ret = _mongoc_aws_credentials_obtain (uri, &creds, &error);
    ASSERT (!ret);
    ASSERT_ERROR_CONTAINS (error,
@@ -53,9 +52,9 @@ test_obtain_credentials (void *unused)
    mongoc_uri_destroy (uri);
 
    /* Password not set at all (not empty string) */
-   uri = mongoc_uri_new_with_error ("mongodb://access_key_id@localhost/", &error);
+   uri = mongoc_uri_new_with_error ("mongodb://localhost/?authMechanism=MONGODB-AWS", &error);
+   ASSERT (mongoc_uri_set_username (uri, "access_key_id"));
    ASSERT_OR_PRINT (uri, error);
-   ASSERT (mongoc_uri_set_auth_mechanism (uri, "MONGODB-AWS"));
    ret = _mongoc_aws_credentials_obtain (uri, &creds, &error);
    ASSERT (!ret);
    ASSERT_ERROR_CONTAINS (error,
@@ -67,10 +66,10 @@ test_obtain_credentials (void *unused)
 
    /* A session token may be set through the AWS_SESSION_TOKEN auth mechanism
     * property */
-   uri = mongoc_uri_new_with_error (
-      "mongodb://access_key_id:secret_access_key@localhost/?authMechanismProperties=AWS_SESSION_TOKEN:token", &error);
+   uri = mongoc_uri_new_with_error ("mongodb://access_key_id:secret_access_key@localhost/"
+                                    "?authMechanism=MONGODB-AWS&authMechanismProperties=AWS_SESSION_TOKEN:token",
+                                    &error);
    ASSERT_OR_PRINT (uri, error);
-   ASSERT (mongoc_uri_set_auth_mechanism (uri, "MONGODB-AWS"));
    ret = _mongoc_aws_credentials_obtain (uri, &creds, &error);
    ASSERT_OR_PRINT (ret, error);
    ASSERT_CMPSTR (creds.access_key_id, "access_key_id");
@@ -80,9 +79,9 @@ test_obtain_credentials (void *unused)
    mongoc_uri_destroy (uri);
 
    /* A session token in the URI with no username/password is an error. */
-   uri = mongoc_uri_new_with_error ("mongodb://localhost/?authMechanismProperties=AWS_SESSION_TOKEN:token", &error);
+   uri = mongoc_uri_new_with_error (
+      "mongodb://localhost/?authMechanism=MONGODB-AWS&authMechanismProperties=AWS_SESSION_TOKEN:token", &error);
    ASSERT_OR_PRINT (uri, error);
-   ASSERT (mongoc_uri_set_auth_mechanism (uri, "MONGODB-AWS"));
    ret = _mongoc_aws_credentials_obtain (uri, &creds, &error);
    ASSERT (!ret);
    ASSERT_ERROR_CONTAINS (error,
